@@ -245,11 +245,11 @@ typedef unsigned long u_num32;
 
 #include "ansiproto.h"
 
-#if HAVE_REGEX_H && !defined(_SQUID_NEXT_)
-#include <regex.h>
-#else /* HAVE_REGEX_H */
+#ifdef USE_GNUREGEX
 #include "GNUregex.h"
-#endif /* HAVE_REGEX_H */
+#elif HAVE_REGEX_H
+#include <regex.h>
+#endif
 
 /*
  * So if FD_SETSIZE is less than SQUID_MAXFD we'd probably better
